--- a/package.json
+++ b/package.json
@@ -1,20 +1,9 @@
 {
-  "name": "graphql_project",
-  "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
   "dependencies": {
-    "@apollo/server": "^4.11.2",
-    "apollo-server": "^3.5.0",
-    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.13.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
-    "graphql": "^15.7.2",
     "mongoose": "^8.8.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
   }
 }
